# coulisse

./: .dockerignore  .gitignore  .release-trigger-v0.2.0  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  compose.matrix.yaml  coulisse.example.yaml  coulisse.schema.json  justfile  oneway.toml
.githooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-automerge.yml  docker.yml  docs.yml
cli/: Cargo.toml
cli/src/: admin.rs  admin_extras.rs  admin_mcp.rs  banner.rs  commands.rs  config.rs  config_store.rs  error.rs  files.rs  lib.rs  main.rs  memory_resolve.rs  openapi.rs  paths.rs  secrets.rs  server.rs  shadow.rs  smoke_runner.rs  storage_handler.rs  stream.rs  workers.rs
cli/src/admin/: live.rs
cli/src/commands/: check.rs  init.rs  init_example.yaml  init_template.yaml  mod.rs  reset.rs  restart.rs  schema.rs  serve.rs  skill.rs  start.rs  status.rs  stop.rs  studio.rs  token.rs  update.rs
cli/src/skills/: codex-instructions.md  coulisse.md
cli/static/: app.js
cli/templates/: base.html  config_edit.html  live.html  live_feed.html  mcp.html  mcp_edit.html  overview.html  providers.html  providers_edit.html  section_edit.html  settings.html
cli/tests/: http.rs
crates/admin/: Cargo.toml  README.md  Trunk.toml  index.html
crates/agents/: Cargo.toml
crates/agents/migrations/: schema.sql
crates/agents/src/: admin.rs  backend.rs  config.rs  error.rs  lib.rs  merge.rs  runtime.rs  store.rs  testing.rs  tools.rs
crates/agents/src/admin/: mod.rs  templates.rs  views.rs
crates/agents/src/tools/: dispatch_task.rs  skill.rs  subagent.rs  tasks_status.rs  telemetry.rs
crates/agents/templates/: agent_detail.html  agent_edit.html  agents.html
crates/auth/: Cargo.toml
crates/auth/migrations/: schema.sql
crates/auth/src/: admin.rs  auth.rs  config.rs  lib.rs  token.rs
crates/auth/templates/: token_created.html  tokens.html
crates/backends/: Cargo.toml
crates/cli/: Cargo.toml
crates/cli/src/: error.rs  lib.rs  main.rs  server.rs  shadow.rs  stream.rs
crates/cli/tests/: http.rs
crates/config/: Cargo.toml
crates/core/: Cargo.toml
crates/core/src/: config_store.rs  lib.rs  migrate.rs  web.rs
crates/experiments/: Cargo.toml
crates/experiments/migrations/: schema.sql
crates/experiments/src/: admin.rs  config.rs  lib.rs  merge.rs  resolver.rs  router.rs  store.rs
crates/experiments/src/admin/: mod.rs  templates.rs  views.rs
crates/experiments/templates/: experiment_edit.html  experiments.html
crates/judge/: Cargo.toml
crates/judge/migrations/: migrate.sql  schema.sql
crates/judge/src/: config.rs  judge.rs  lib.rs  store.rs
crates/judges/: Cargo.toml
crates/judges/migrations/: schema.sql
crates/judges/src/: admin.rs  config.rs  judge.rs  lib.rs  merge.rs  store.rs  types.rs
crates/judges/src/admin/: mod.rs  templates.rs  views.rs
crates/judges/templates/: judge_detail.html  judge_edit.html  judges.html  scores.html  scores_means.html
crates/language/: Cargo.toml
crates/limits/: Cargo.toml
crates/limits/migrations/: migrate.sql  schema.sql
crates/limits/src/: error.rs  lib.rs  request_limits.rs  tracker.rs
crates/mcp/: Cargo.toml
crates/mcp/migrations/: schema.sql
crates/mcp/src/: config.rs  dcr.rs  discovery.rs  error.rs  lib.rs  oauth.rs  pool.rs  routes.rs  sanitize.rs  server.rs  sse_client.rs  vault.rs
crates/memory/: Cargo.toml
crates/memory/migrations/: migrate.sql  schema.sql
crates/memory/src/: config.rs  embedder.rs  error.rs  extractor.rs  lib.rs  store.rs  testing.rs  types.rs
crates/memory/src/admin/: mod.rs  templates.rs  views.rs
crates/memory/templates/: agent_recent_conversations.html  conversation.html  conversations.html  users.html
crates/memory/tests/: context.rs  isolation.rs  persistence.rs
crates/prompter/: Cargo.toml
crates/prompter/src/: backend.rs  config.rs  error.rs  experiment.rs  lang.rs  lib.rs  testing.rs  usage.rs
crates/providers/: Cargo.toml
crates/proxy/: Cargo.toml
crates/proxy/src/: chat.rs  error.rs  language.rs  lib.rs  response_format.rs  server.rs  shadow.rs  stream.rs  tool.rs
crates/proxy/tests/: http.rs
crates/server/: Cargo.toml
crates/server/src/: admin.rs  admin_auth.rs  admin_ui.rs  chat.rs  config.rs  error.rs  extractor.rs  lib.rs  server.rs  stream.rs  studio.rs  studio_auth.rs  studio_ui.rs
crates/server/tests/: http.rs
crates/sidecars/: Cargo.toml
crates/sidecars/src/: config.rs  lib.rs  supervisor.rs
crates/skills/: Cargo.toml
crates/skills/src/: config.rs  lib.rs
crates/smoke/: Cargo.toml
crates/smoke/migrations/: migrate.sql  schema.sql
crates/smoke/src/: admin.rs  config.rs  dispatcher.rs  lib.rs  merge.rs  store.rs  types.rs
crates/smoke/src/admin/: mod.rs  templates.rs  views.rs
crates/smoke/templates/: smoke.html  smoke_edit.html  smoke_run.html  smoke_test_detail.html
crates/storage/: Cargo.toml
crates/storage/migrations/: schema.sql
crates/storage/src/: backend.rs  config.rs  error.rs  fs.rs  lib.rs  mime.rs  s3.rs  store.rs
crates/studio/: Cargo.toml  README.md  Trunk.toml  index.html
crates/studio/src/: api.rs  app.rs  auth.rs  config.rs  lib.rs  router.rs  state.rs  templates.rs  views.rs
crates/studio/src/components/: spinner.rs
crates/studio/src/pages/: mod.rs
crates/studio/templates/: base.html  conversation.html  events.html  experiments.html  users.html
crates/tasks/: Cargo.toml
crates/telemetry/: Cargo.toml
crates/telemetry/migrations/: migrate.sql  schema.sql
crates/telemetry/src/: admin.rs  config.rs  ctx.rs  error.rs  event.rs  id.rs  init.rs  lib.rs  sink.rs  sqlite_layer.rs  tool_call.rs
crates/telemetry/src/admin/: mod.rs  templates.rs  views.rs
crates/telemetry/templates/: events.html  tool_calls.html  tool_detail.html  tools.html
crates/triggers/: Cargo.toml
crates/triggers/src/: boot.rs  config.rs  cron.rs  error.rs  lib.rs  webhook.rs
docker/matrix/: element-config.json
docs/: book.toml
docs/src/: SUMMARY.md  (+1 more)
examples/: README.md  customer-support.yaml  personal-assistant.yaml  pr-review-bot.yaml
(+68 files in other folders)
