[workspace]
resolver = "3"
members = [
    "cli",
    "crates/agents",
    "crates/auth",
    "crates/providers",
    "crates/core",
    "crates/experiments",
    "crates/judges",
    "crates/limits",
    "crates/mcp",
    "crates/memory",
    "crates/proxy",
    "crates/smoke",
    "crates/telemetry",
]

[workspace.package]
description = "OpenAI-compatible server with memory, tools, and multi-backend routing — configured with one YAML file."
edition = "2024"
license = "MIT"
repository = "https://github.com/Almaju/coulisse"
version = "0.1.0"

[workspace.dependencies]
agents = { path = "crates/agents" }
arc-swap = "1"
async-stream = "0.3"
auth = { path = "crates/auth" }
axum = "0.8"
askama = "0.14"
clap = { version = "4", features = ["derive", "env"] }
providers = { path = "crates/providers" }
coulisse-core = { path = "crates/core" }
experiments = { path = "crates/experiments" }
futures = "0.3"
judges = { path = "crates/judges" }
limits = { path = "crates/limits" }
mcp = { path = "crates/mcp" }
memory = { path = "crates/memory" }
nix = { version = "0.30", features = ["process", "signal"] }
notify = "8"
oxilangtag = "0.1"
proxy = { path = "crates/proxy" }
rig-core = { version = "0.35", features = ["rmcp"] }
rmcp = { version = "1", features = [
    "client",
    "reqwest",
    "transport-child-process",
    "transport-streamable-http-client",
    "transport-streamable-http-client-reqwest",
] }
self_update = { version = "0.42", features = ["archive-tar", "compression-flate2"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
smoke = { path = "crates/smoke" }
sqlx = { version = "0.8", default-features = false, features = ["macros", "runtime-tokio", "sqlite"] }
telemetry = { path = "crates/telemetry" }
thiserror = "2"
tokio = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["serde", "v4", "v5"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
