[workspace]
resolver = "3"
members = [
    "cli",
    "crates/agents",
    "crates/auth",
    "crates/providers",
    "crates/core",
    "crates/experiments",
    "crates/judges",
    "crates/limits",
    "crates/mcp",
    "crates/memory",
    "crates/proxy",
    "crates/smoke",
    "crates/telemetry",
]

[workspace.package]
description = "OpenAI-compatible server with memory, tools, and multi-backend routing — configured with one YAML file."
edition = "2024"
license = "MIT"
repository = "https://github.com/Almaju/coulisse"
version = "0.1.0"

[workspace.dependencies]
agents = { path = "crates/agents" }
arc-swap = "1"
async-stream = "0.3"
auth = { path = "crates/auth" }
axum = "0.8"
askama = "0.15"
clap = { version = "4", features = ["derive", "env"] }
providers = { path = "crates/providers" }
coulisse-core = { path = "crates/core" }
experiments = { path = "crates/experiments" }
futures = "0.3"
judges = { path = "crates/judges" }
limits = { path = "crates/limits" }
mcp = { path = "crates/mcp" }
memory = { path = "crates/memory" }
nix = { version = "0.31", features = ["process", "signal"] }
notify = "8"
oxilangtag = "0.1"
proxy = { path = "crates/proxy" }
rig-core = { version = "0.35", features = ["rmcp"] }
rmcp = { version = "1", features = [
    "client",
    "reqwest",
    "transport-child-process",
    "transport-streamable-http-client",
    "transport-streamable-http-client-reqwest",
] }
self_update = { version = "0.44", features = ["archive-tar", "compression-flate2"] }
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
smoke = { path = "crates/smoke" }
sqlx = { version = "0.8", default-features = false, features = ["macros", "runtime-tokio", "sqlite"] }
telemetry = { path = "crates/telemetry" }
thiserror = "2"
tokio = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["serde", "v4", "v5"] }

[workspace.lints.rust]
unreachable_pub = "warn"
unsafe_code = "deny"
unused_must_use = "deny"

[workspace.lints.clippy]
# Trial: enable the pedantic group, then opt out every rule it
# fires on so the workspace builds cleanly. The opt-out list IS the
# "what would pedantic cost us" report — flip any line to `warn`
# and fix the violations to graduate that rule into our standards.
# Counts (workspace + tests) at the time this trial was assembled.
pedantic = { level = "warn", priority = -1 }

# --- documentation churn (no real bug-finding value) ---------------
doc_markdown = "allow"               # 54 — wants backticks around CamelCase identifiers in doc comments
missing_errors_doc = "allow"         # 99 — `# Errors` section on every fn returning Result
missing_panics_doc = "allow"         # 6  — `# Panics` section on every fn that calls .unwrap()
must_use_candidate = "allow"         #  83 — `#[must_use]` on every constructor returning Self
return_self_not_must_use = "allow"   #  3 — same family as above

# --- numeric casts: mostly intentional u64↔i64 sqlite binds --------
cast_lossless = "allow"              # 20 — would prefer `From` over `as`
cast_possible_truncation = "allow"   # 33
cast_possible_wrap = "allow"         # 26
cast_precision_loss = "allow"        # 11
cast_sign_loss = "allow"             # 31

# --- frequent false positives on this codebase ---------------------
borrow_as_ptr = "allow"              #  1 — sqlite_layer raw-pointer counter access
ref_as_ptr = "allow"                  #  1 — same site as borrow_as_ptr
elidable_lifetime_names = "allow"    #  1 — generic store impl block uses `'static`
manual_string_new = "allow"          #  1 — test asserts behavior on `""` literally
needless_raw_string_hashes = "allow" #  1 — test JSON literal with too-many-hashes
ref_option = "allow"                 #  1 — &Option<_> param in cli signature
similar_names = "allow"              #  3 — flags short/idiomatic bindings
stable_sort_primitive = "allow"      #  1 — embedder ranks Vec<f32> by index, sort_by needed
used_underscore_binding = "allow"    #  1 — test fixture binds `_state` it later reads
unreadable_literal = "allow"         #  2 — wants underscores in 7*86400-style literals

# --- the rest: real signal we'd want to fix to graduate -----------
# Listed here as `allow` so the PR builds cleanly. Flip to `warn`
# and clean up the call sites if you want to adopt them.
default_trait_access = "allow"            #  2
float_cmp = "allow"                       #  9 — `f32 == f32` comparisons (real signal)
format_push_string = "allow"              #  3 — `s.push_str(&format!(..))` → `write!(s, ..)`
manual_let_else = "allow"                 #  — kept previously at `warn`
map_unwrap_or = "allow"                   # 14 — `.map(..).unwrap_or(..)` → `.map_or(..)`
match_same_arms = "allow"                 #  4
needless_pass_by_value = "allow"          # 20 — owned args that are only borrowed
redundant_closure_for_method_calls = "allow"  # — kept previously at `warn`
semicolon_if_nothing_returned = "allow"   #  6
single_match_else = "allow"               #  2
too_many_lines = "allow"                  #  4
uninlined_format_args = "allow"           # — kept previously at `warn`

# Restrictions: project-wide hygiene rules. Keep small and meaningful;
# CLAUDE.md handles unwrap/expect/panic culturally rather than via lints
# because boot-path code legitimately uses them.
dbg_macro = "deny"
mod_module_files = "deny"
todo = "warn"
unimplemented = "deny"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
