[package]
name = "coulisse"
description.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[[bin]]
name = "coulisse"
path = "src/main.rs"

[dependencies]
agents.workspace = true
arc-swap.workspace = true
askama.workspace = true
async-stream.workspace = true
auth.workspace = true
axum.workspace = true
clap.workspace = true
coulisse-core.workspace = true
experiments.workspace = true
futures.workspace = true
judges.workspace = true
limits.workspace = true
mcp.workspace = true
memory.workspace = true
nix.workspace = true
notify.workspace = true
providers.workspace = true
proxy.workspace = true
self_update.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_yaml.workspace = true
smoke.workspace = true
telemetry.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "net", "rt-multi-thread", "sync"] }
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
coulisse-core.workspace = true
http-body-util = "0.1"
sqlx.workspace = true
tokio = { workspace = true, features = ["macros", "net", "rt", "time"] }
tower = { version = "0.5", features = ["util"] }
tracing-subscriber.workspace = true
