[package]
name = "agents"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
async-stream.workspace = true
backends.workspace = true
coulisse-core.workspace = true
experiments.workspace = true
futures.workspace = true
oxilangtag.workspace = true
rig-core.workspace = true
rmcp.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["process"] }
tracing.workspace = true

[dev-dependencies]
sqlx.workspace = true
telemetry.workspace = true
tokio = { workspace = true, features = ["macros", "rt"] }
tracing-subscriber.workspace = true
