[package]
name = "agents"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
arc-swap.workspace = true
askama.workspace = true
async-stream.workspace = true
axum.workspace = true
coulisse-core.workspace = true
mcp.workspace = true
providers.workspace = true
rig-core.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[lints]
workspace = true
