[package]
name = "auth"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
axum.workspace = true
axum-oidc = "0.6"
base64 = "0.22"
http = "1"
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
time = "0.3"
tower = { version = "0.5", features = ["util"] }
tower-sessions = "0.15"
tracing.workspace = true
