[package]
name = "coulisse"
description.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[[bin]]
name = "coulisse"
path = "src/main.rs"

[dependencies]
agents.workspace = true
axum.workspace = true
config.workspace = true
judge.workspace = true
limits.workspace = true
memory.workspace = true
proxy.workspace = true
studio.workspace = true
telemetry.workspace = true
tokio = { workspace = true, features = ["macros", "net", "rt-multi-thread"] }
