[package]
name = "coulisse"
description.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[[bin]]
name = "coulisse"
path = "src/main.rs"

[dependencies]
agents.workspace = true
async-stream.workspace = true
axum.workspace = true
config.workspace = true
futures.workspace = true
judge.workspace = true
limits.workspace = true
memory.workspace = true
proxy.workspace = true
serde_json.workspace = true
studio.workspace = true
telemetry.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "net", "rt-multi-thread"] }
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
http-body-util = "0.1"
sqlx.workspace = true
tokio = { workspace = true, features = ["macros", "net", "rt", "time"] }
tower = { version = "0.5", features = ["util"] }
