[package]
name = "coulisse-core"
edition.workspace = true
license.workspace = true
version.workspace = true

[lib]
name = "coulisse_core"

[dependencies]
axum.workspace = true
semver.workspace = true
serde.workspace = true
serde_yaml.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }

[lints]
workspace = true
