[package]
name = "experiments"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
arc-swap.workspace = true
askama.workspace = true
axum.workspace = true
coulisse-core.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_yaml.workspace = true
