[package]
name = "mcp"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
aes-gcm.workspace = true
axum.workspace = true
base64.workspace = true
coulisse-core.workspace = true
hmac = "0.12"
moka = { version = "0.12", features = ["future"] }
percent-encoding = "2"
rand.workspace = true
reqwest = { version = "0.12", features = ["json"] }
rig-core.workspace = true
rmcp.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10"
sqlx.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["process"] }
tracing.workspace = true

[lints]
workspace = true
