[package]
name = "mcp"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
aes-gcm.workspace = true
axum.workspace = true
base64.workspace = true
coulisse-core.workspace = true
hmac.workspace = true
moka.workspace = true
percent-encoding.workspace = true
rand.workspace = true
reqwest.workspace = true
rig-core.workspace = true
rmcp.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["process"] }
tracing.workspace = true

[lints]
workspace = true

[dev-dependencies]
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
