[package]
name = "memory"
edition.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
tokio = { workspace = true, features = ["sync"] }
uuid = { workspace = true, features = ["serde", "v4"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
