[package]
name = "memory"
edition.workspace = true

[dependencies]
reqwest = { version = "0.13", default-features = false }
rig-core.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "rt", "sync"] }
tracing.workspace = true
uuid = { workspace = true, features = ["serde", "v4"] }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["macros", "rt"] }
