[package]
name = "prompter"
edition.workspace = true

[dependencies]
async-stream.workspace = true
futures.workspace = true
oxilangtag.workspace = true
rig-core.workspace = true
rmcp.workspace = true
serde.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["process"] }
