[package]
name = "prompter"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
async-stream.workspace = true
futures.workspace = true
memory.workspace = true
oxilangtag.workspace = true
rig-core.workspace = true
rmcp.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
telemetry.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["process"] }

[dev-dependencies]
sqlx.workspace = true
tokio = { workspace = true, features = ["macros", "rt"] }
