[package]
name = "proxy"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
agents.workspace = true
async-stream.workspace = true
axum.workspace = true
config.workspace = true
futures.workspace = true
judge.workspace = true
limits.workspace = true
memory.workspace = true
serde.workspace = true
serde_json.workspace = true
telemetry.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["net", "rt"] }
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
http-body-util = "0.1"
tokio = { workspace = true, features = ["macros", "net", "rt", "time"] }
tower = { version = "0.5", features = ["util"] }
