[package]
name = "server"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
axum.workspace = true
schemars.workspace = true
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread"] }

[dev-dependencies]
serde_yaml.workspace = true

[lints]
workspace = true
