[package]
name = "storage"
edition.workspace = true
license.workspace = true
version.workspace = true

[features]
s3 = ["dep:aws-sdk-s3", "dep:aws-config"]

[dependencies]
aws-config = { version = "1", optional = true }
aws-sdk-s3 = { version = "1", optional = true }
coulisse-core.workspace = true
hex = "0.4"
infer = "0.19"
schemars.workspace = true
serde = { workspace = true, features = ["derive"] }
sha2.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["fs", "io-util"] }
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["macros", "rt"] }

[lints]
workspace = true
