[package]
name = "studio"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
askama = "0.14"
axum.workspace = true
axum-oidc = "0.6"
base64 = "0.22"
config.workspace = true
http = "1"
memory.workspace = true
serde.workspace = true
serde_json.workspace = true
telemetry.workspace = true
thiserror.workspace = true
time = "0.3"
tower = { version = "0.5", features = ["util"] }
tower-sessions = "0.14"
tracing.workspace = true
uuid.workspace = true
