[package]
name = "telemetry"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
coulisse-core.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt", "sync"] }
tracing.workspace = true
tracing-subscriber.workspace = true
uuid = { workspace = true, features = ["serde", "v4"] }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "time"] }
