[package]
name = "telemetry"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
askama.workspace = true
axum.workspace = true
coulisse-core.workspace = true
opentelemetry = "0.27"
opentelemetry-otlp = { version = "0.27", features = ["grpc-tonic", "http-proto", "reqwest-blocking-client"] }
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt", "sync"] }
tonic = "0.12"
tracing.workspace = true
tracing-opentelemetry = "0.28"
tracing-subscriber.workspace = true
uuid = { workspace = true, features = ["serde", "v4"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "time"] }

[lints]
workspace = true
