[package]
name = "triggers"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
axum.workspace = true
chrono = { version = "0.4", default-features = false, features = ["clock"] }
coulisse-core.workspace = true
cron = "0.12"
schemars.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt", "time"] }
tracing.workspace = true

[lints]
workspace = true
